@@ -1337,31 +1337,31 @@ SCIP_RETCODE readBounds(
             SCIP_CALL( SCIPreleaseVar(scip, &varcpy) );
             /* mpsinputEntryIgnored(scip, mpsi, "column", mpsinputField3(mpsi), "bound", bndname, SCIP_VERBLEVEL_NORMAL); */
          }
+         assert(var != NULL);
+
+         if( mpsinputField4(mpsi) == NULL )
+            val = 0.0;
          else
+            val = atof(mpsinputField4(mpsi));
+
+         /* if a bound of a binary variable is given, the variable is converted into an integer variable
+          * with default bounds 0 <= x <= infinity
+          */
+         if( SCIPvarGetType(var) == SCIP_VARTYPE_BINARY )
          {
-            if( mpsinputField4(mpsi) == NULL )
-               val = 0.0;
-            else
-               val = atof(mpsinputField4(mpsi));
-
-            /* if a bound of a binary variable is given, the variable is converted into an integer variable
-             * with default bounds 0 <= x <= infinity
-             */
-            if( SCIPvarGetType(var) == SCIP_VARTYPE_BINARY )
+            if( (mpsinputField1(mpsi)[1] == 'I') /* CPLEX extension (Integer Bound) */
+               || (!(mpsinputField1(mpsi)[0] == 'L' && SCIPisEQ(scip, val, 0.0))
+                  && !(mpsinputField1(mpsi)[0] == 'U' && SCIPisEQ(scip, val, 1.0))) )
             {
-               if( (mpsinputField1(mpsi)[1] == 'I') /* CPLEX extension (Integer Bound) */
-                  || (!(mpsinputField1(mpsi)[0] == 'L' && SCIPisEQ(scip, val, 0.0))
-                     && !(mpsinputField1(mpsi)[0] == 'U' && SCIPisEQ(scip, val, 1.0))) )
-               {
-                  assert(SCIPisEQ(scip, SCIPvarGetLbGlobal(var), 0.0));
-                  assert(SCIPisEQ(scip, SCIPvarGetUbGlobal(var), 1.0));
-                  SCIP_CALL( SCIPchgVarType(scip, var, SCIP_VARTYPE_INTEGER) );
-                  SCIP_CALL( SCIPchgVarUb(scip, var, SCIPinfinity(scip)) );
-               }
+               assert(SCIPisEQ(scip, SCIPvarGetLbGlobal(var), 0.0));
+               assert(SCIPisEQ(scip, SCIPvarGetUbGlobal(var), 1.0));
+               SCIP_CALL( SCIPchgVarType(scip, var, SCIP_VARTYPE_INTEGER) );
+               SCIP_CALL( SCIPchgVarUb(scip, var, SCIPinfinity(scip)) );
             }
+         }
 
-            switch( mpsinputField1(mpsi)[0] )
-            {
+         switch( mpsinputField1(mpsi)[0] )
+         {
             case 'L':
                if( mpsinputField1(mpsi)[1] == 'I' ) /* CPLEX extension (Integer Bound) */
                {
@@ -1394,7 +1394,7 @@ SCIP_RETCODE readBounds(
                assert(semicont != NULL);
                semicont[nsemicont] = var;
                ++nsemicont;
-               
+
                SCIP_CALL( SCIPchgVarUb(scip, var, val) );
                break;
             case 'F':
@@ -1423,7 +1423,6 @@ SCIP_RETCODE readBounds(
             default:
                mpsinputSyntaxerror(mpsi);
                return SCIP_OKAY;
-            }
          }
       }
       else
